# movielens-reco

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/reco/: artifacts.py  cli.py  datasets.py  eval.py  eval_itemcos.py  eval_svd.py  itemcos.py  preprocess.py  recommend.py  svd.py
src/reco.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_metrics.py  test_sanity.py  test_split.py
